# AerialTN

./: CMakeLists.txt  README.md  package.xml
config/: qos_override.yaml  qos_override_full_monty.yaml
include/ircam/: ircam_h264_node.hpp  ircam_node.hpp  v4l2_capture.hpp
launch/: ircam_composed.launch.py  ircam_standalone.launch.py  ircam_v4l2_launch.py  record_bag.py  record_bag_full_monty_encoded_launch.py  record_bag_mcap_launch.py  record_bag_misp_decoded_launch.py  record_bag_misp_encoded_launch.py  record_bag_raw_launch.py  record_bag_zstd_launch.py  voxl_decoder_launch.py  voxl_h264_decoder_launch.py  voxl_h265_decoder_launch.py
shell_scripts/: opencv_install.sh  orbslam3_base_install.sh  orbslam3_install.sh  orbslam3_ros2_wrapper_install.sh  pangolin_install.sh  python_setup.sh  python_venv_setup.sh  ros2_humble_install.sh  rovtio_install.sh  rovtio_ros2_install.sh  shebang.sh  vins_multi_install.sh
src/: voxl_decoder.cpp  voxl_h264_decoder.cpp  voxl_h265_decoder.cpp
src/ircam/: ircam_component.cpp  ircam_exec.cpp  ircam_h264_component.cpp  ircam_h264_node.cpp  ircam_node.cpp  ircam_repub.cpp  v4l2_capture.cpp
