<?xml version="1.0"?>
<package format="3">
 <name>aerial_tn</name>
 <version>0.1.0</version>
 <description>TODO: Package description</description>
 <maintainer email="202004778@post.au.dk">Jonathan Nielsen</maintainer>
 <license>Apache License</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 
 <depend>rclcpp</depend>
 <depend>rclcpp_components</depend>
 <depend>sensor_msgs</depend>
 <depend>std_msgs</depend>

 <build_depend>libavcodec-dev</build_depend>
 <build_depend>libavutil-dev</build_depend>
 <build_depend>libswscale-dev</build_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
